# freepeaks

./: .gitattributes  .gitignore  CMakeLists.txt  RESEARCH_NOTES.md  compile_list.txt  run_nbn_cmaes_1e6.ps1
Data/ofec_data_new/: .gitignore
FreePeaks_Benchmark/: FreePeaks_Benchmark.slnx
FreePeaks_Benchmark/FreePeaks_Benchmark/: FreePeaks_Benchmark.aps  FreePeaks_Benchmark.vcxproj  FreePeaks_Benchmark.vcxproj.filters  freepeaksmeshv.m  resource.h
Matlab/: build_ofec_mpmmo_mex.m  collect_ofec_mpmmo_platemo_tasks.m  compare_ofec_mpmmo_values.m  export_ofec_mpmmo_result_display.m  ofec_mpmmo_metrics.m  ofec_mpmmo_mex.cpp  ofec_mpmmo_mex.mexw64  ofec_mpmmo_setup.m  plot_ofec_mpmmo_platemo_landscape.m  run_ofec_mpmmo_platemo_comparison.m  run_ofec_mpmmo_platemo_parallel_1e6.m  summarize_ofec_mpmmo_1e5_results.m  summarize_ofec_mpmmo_nbn_cmaes.m
Reports/midterm_latex/: RUN_EXPERIMENTS.md  main.aux  main.tex  main.toc  result_table_algorithm_suite_D.tex  result_tables_by_dimension.tex
Results/ofec_mpmmo_1e5_summary/: all_metrics.csv  nbn_cmaes_metrics.csv  nbn_cmaes_metrics.mat  result_display_algorithm_suite_D.csv  summary_1e5.mat  summary_by_algorithm_dimension.csv  summary_by_suite_dimension.csv
Results/ofec_mpmmo_final/: nbn_cmaes_metrics.csv  nbn_cmaes_metrics.mat
Results/ofec_mpmmo_platemo_1e5/: platemo_metrics_partial.csv  platemo_metrics_partial.mat
Results/ofec_mpmmo_platemo_smoke/: MMOEABH_suite01_D2_run01.mat  MMOPSO_suite01_D2_run01.mat  platemo_metrics.csv  platemo_metrics.mat
Results/ofec_mpmmo_timing/: MMOPSO_suite01_D2_run01.mat  platemo_metrics.csv  platemo_metrics.mat
Sourcecode/freepeak_ofec/dll/: CMakeLists.txt  ofec_mpmmo_api.cpp  ofec_mpmmo_api.h
Visualization/: all_visualizations.m  benchmark_summary.csv  convergence.txt  landscape_after.txt  landscape_dm0_conditional.txt  landscape_dm1_conditional.txt  landscape_global_grid.txt  mpmcoea_suite_summary.csv  mpmmcoea_suite_summary.csv  plot_free_peaks_multiparty_samples.py  plot_multiparty_nbn_cmaes_results.py  plot_party_landscape.m  run_all_visualizations.m  visualize_consensus_overview_8p.m  visualize_dm_landscapes.m  visualize_landscapes.m  visualize_mpmcoea.m  visualize_mpmcoea_overview.asv  visualize_mpmcoea_overview.m  visualize_mpmmo_results.m  visualize_results.m  visualize_solutions.m  visuallize_results.asv  visuallize_results.m
Visualization/landscape_after/: global_grid.txt  landscape_dm0_x2_0.5.txt  slice_d0_d1.txt  slice_d0_d2.txt  slice_d0_d3.txt  slice_d1_d2.txt  slice_d1_d3.txt  slice_d2_d3.txt  slice_x2_0.50.txt
Visualization/landscape_before/: landscape_global_grid.txt  slice_d0_d1.txt  slice_d0_d2.txt  slice_d0_d3.txt  slice_d1_d2.txt  slice_d1_d3.txt  slice_d2_d3.txt  slice_x2_0.25.txt  slice_x2_0.75.txt  slice_x2_0.8.txt
Visualization/mpmcoea_P10_D10/: cec2015_metrics.txt  convergence.txt  gen_0_party0.txt  (+34 more)
(+41513 files in other folders)
